--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -16,14 +16,15 @@
 <body>
     <header>
         <!-- Navigatiob Bar -->
-        <nav class="navbar navbar-expand-lg ">
+        <nav class="navbar navbar-expand-lg  bg-dark.bg-gradient">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="../img/LogoAmazingEvents.png" alt="Logo" height="24"
                         class="d-inline-block align-text-top">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -68,7 +69,7 @@
             <div class="col-md-4 col-sm p-2 border border-start-0 mt-5 mb-5 rounded bg-secondary">
                 <div class="cardDetail h-100">
                     <div class="card-body p-4 m-3">
-                        <h3 class="card-title text-center mb-3">Titulo</h3>
+                        <h3 class="card-title text-center mb-3">Food Tour</h3>
                         <ul>
                             <li>Name</li>
                             <li>Date</li>
@@ -87,7 +88,7 @@
 
 
 
-        
+
     </main>
 
     <footer>
