--- a/assets/pages/upcomingEvents.html
+++ b/assets/pages/upcomingEvents.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazing Events | Upcoming Events</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/LogoAmazingEvents.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -21,8 +22,9 @@
                     <img src="../img/LogoAmazingEvents.png" alt="Logo" height="24"
                         class="d-inline-block align-text-top">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -51,13 +53,12 @@
         <!-- Carousel-->
         <div class="container slider">
             <div class="d-flex justify-content-between">
-                <a href="/index.html" class="btn btn-trasparent btn-lg" tabindex="-1" role="button"
-                    aria-disabled="true" aria-placeholder="Home">
+                <a href="/index.html" class="btn btn-trasparent btn-lg" tabindex="-1" role="button">
                     <i class="bi bi-chevron-left"></i>
                 </a>
-                <h2 class="align-self-end">Upcoming Events</h2>
-                <a class="btn bg-trasparent btn-lg" href="./pastEvents.html " tabindex="-1"
-                    role="button" aria-disabled="true" aria-placeholder="Past Events">
+                <h2 class="align-self-center">Upcoming Events</h2>
+                <a class="btn bg-trasparent btn-lg" href="./pastEvents.html " tabindex="-1" role="button"
+                     >
                     <i class="bi bi-chevron-right"></i>
                 </a>
 
@@ -115,49 +116,53 @@
         <section class="cards">
             <div class="card-group p-3 row justify-content-center row-cols-1">
                 <div class="card m-3 col rounded bg-secondary">
-                    <img src="../img/Cinema.jpg" class="card-img-top rounded" alt="...">
+                    <img src="../img/Cinema.jpg" class="card-img-top rounded" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Amazing Movies</h5>
-                        <p class="card-text">The best sensation. Rooms with special sound. Amazing effects.</p>
+                        <p class="card-text">Generation of sensory effects of rain, wind, impacts, movement, smells, fog
+                            or light to fully immerse ourselves in the world recreated by the movies.</p>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
                         <p class="align-self-center">Price $10000</p>
-                        <a href="./assets/pages/details.html" class="btn btn-dark">See Info</a>
+                        <a href="../pages/details.html" class="btn btn-dark">See Info</a>
                     </div>
                 </div>
                 <div class="card m-3 col  rounded bg-secondary">
-                    <img src="../img/Food_Fair.jpg" class="card-img-top rounded" alt="...">
+                    <img src="../img/Food_Fair.jpg" class="card-img-top rounded" alt="">
                     <div class="card-body">
                         <h5 class="card-title">Food Tour</h5>
-                        <p class="card-text">Texto Descriptivo</p>
+                        <p class="card-text">We specialize in
+                            designing unforgettable trips based on your individual interests and travel styles. We’d
+                            love to get to know you!</p>
 
                     </div>
                     <div class="card-footer d-flex justify-content-between">
                         <p class="align-self-center">Price $10000</p>
-                        <a href="#" class="btn btn-dark">See Info</a>
+                        <a href="../pages/details.html" class="btn btn-dark">See Info</a>
                     </div>
                 </div>
                 <div class="card m-3 col rounded bg-secondary">
-                    <img src="../img/Music_Concert.jpg" class="card-img-top rounded" alt="...">
+                    <img src="../img/Music_Concert.jpg" class="card-img-top rounded" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">Titulo</h5>
-                        <p class="card-text">Texto Descriptivo</p>
+                        <h5 class="card-title">Music Concert Festival</h5>
+                        <p class="card-text">The music lifts you together, and you feel connected to them all. That’s
+                            the power of music. And that’s the singular experience of a music festival.</p>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
                         <p class="align-self-center">Price $10000</p>
-                        <a href="#" class="btn btn-dark">See Info</a>
+                        <a href="../pages/details.html" class="btn btn-dark">See Info</a>
                     </div>
                 </div>
 
                 <div class="card m-3 col rounded bg-secondary">
-                    <img src="../img/Costume_Party.jpg" class="card-img-top rounded" alt="...">
+                    <img src="../img/Costume_Party.jpg" class="card-img-top rounded" alt="">
                     <div class="card-body">
-                        <h5 class="card-title">Titulo</h5>
-                        <p class="card-text">Texto Descriptivo</p>
+                        <h5 class="card-title">Festival Costumes</h5>
+                        <p class="card-text">The most extravagant and exclusive costumes.</p>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
                         <p class="align-self-center">Price $10000</p>
-                        <a href="#" class="btn btn-dark">See Info</a>
+                        <a href="../pages/details.html" class="btn btn-dark">See Info</a>
                     </div>
                 </div>
             </div>
