--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazing Events | Home</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="./assets/img/LogoAmazingEvents.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -53,13 +54,12 @@
         <!-- Carousel-->
         <div class="container slider">
             <div class="d-flex justify-content-between">
-                <a href="./assets/pages/stats.html" class="btn btn-trasparent btn-lg" tabindex="-1" role="button"
-                    aria-disabled="true">
+                <a href="./assets/pages/stats.html" class="btn btn-trasparent btn-lg" tabindex="-1" role="button">
                     <i class="bi bi-chevron-left"></i>
                 </a>
                 <h2 class="align-self-end">Home</h2>
                 <a class="btn bg-trasparent btn-lg" href="./assets/pages/upcomingEvents.html " tabindex="-1"
-                    role="button" aria-disabled="true">
+                    role="button">
                     <i class="bi bi-chevron-right"></i>
                 </a>
 
@@ -118,10 +118,11 @@
         <section class="cards">
             <div class="card-group p-3 row justify-content-center row-cols-1">
                 <div class="card m-3 col rounded bg-secondary">
-                    <img src="./assets/img/Cinema.jpg" class="card-img-top rounded" alt="...">
+                    <img src="./assets/img/Cinema.jpg" class="card-img-top rounded" alt="cinema">
                     <div class="card-body">
                         <h5 class="card-title">Amazing Movies</h5>
-                        <p class="card-text">The best sensation. Rooms with special sound. Amazing effects.</p>
+                        <p class="card-text">Generation of sensory effects of rain, wind, impacts, movement, smells, fog
+                            or light to fully immerse ourselves in the world recreated by the movies.</p>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
                         <p class="align-self-center">Price $10000</p>
@@ -129,38 +130,42 @@
                     </div>
                 </div>
                 <div class="card m-3 col  rounded bg-secondary">
-                    <img src="./assets/img/Food_Fair.jpg" class="card-img-top rounded" alt="...">
+                    <img src="./assets/img/Food_Fair.jpg" class="card-img-top rounded" alt="food">
                     <div class="card-body">
-                        <h5 class="card-title">Food Tour</h5>
-                        <p class="card-text">Texto Descriptivo</p>
+                        <h5 class="card-title">Food Tours</h5>
+                        <p class="card-text">We specialize in
+                            designing unforgettable trips based on your individual interests and travel styles. We’d
+                            love to get to know you!</p>
 
                     </div>
                     <div class="card-footer d-flex justify-content-between">
                         <p class="align-self-center">Price $10000</p>
-                        <a href="#" class="btn btn-dark">See Info</a>
+                        <a href="./assets/pages/details.html" class="btn btn-dark">See Info</a>
                     </div>
                 </div>
                 <div class="card m-3 col rounded bg-secondary">
-                    <img src="./assets/img/Museum_Tour.jpg" class="card-img-top rounded" alt="...">
+                    <img src="./assets/img/Museum_Tour.jpg" class="card-img-top rounded" alt="museum">
                     <div class="card-body">
-                        <h5 class="card-title">Titulo</h5>
-                        <p class="card-text">Texto Descriptivo</p>
+                        <h5 class="card-title">Jurassic Experience</h5>
+                        <p class="card-text">See the Field Museum in a whole new light! Families and groups with kids
+                            ages 6 to 12 can spend the night at the museum during Dozin’ with the Dinos.</p>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
                         <p class="align-self-center">Price $10000</p>
-                        <a href="#" class="btn btn-dark">See Info</a>
+                        <a href="./assets/pages/details.html" class="btn btn-dark">See Info</a>
                     </div>
                 </div>
 
                 <div class="card m-3 col rounded bg-secondary">
-                    <img src="./assets/img/Marathon.jpg" class="card-img-top rounded" alt="...">
+                    <img src="./assets/img/Marathon.jpg" class="card-img-top rounded" alt="marathon">
                     <div class="card-body">
-                        <h5 class="card-title">Titulo</h5>
-                        <p class="card-text">Texto Descriptivo</p>
+                        <h5 class="card-title">Marathon Majors</h5>
+                        <p class="card-text">The circuit of the six most spectacular and massive marathons in the world.
+                            For both amateurs and professionals, it is a very big dream to race in these big cities.</p>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
                         <p class="align-self-center">Price $10000</p>
-                        <a href="#" class="btn btn-dark">See Info</a>
+                        <a href="./assets/pages/details.html" class="btn btn-dark">See Info</a>
                     </div>
                 </div>
             </div>
