--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazing Events | Contact</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/LogoAmazingEvents.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -15,14 +16,15 @@
 <body>
     <header>
         <!-- Navigatiob Bar -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg  bg-dark.bg-gradient">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="../img/LogoAmazingEvents.png" alt="Logo" height="24"
                         class="d-inline-block align-text-top">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -49,74 +51,16 @@
         </nav>
 
         <!-- Carousel-->
-        <div class="bd-example">
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="container slider">
+            <div class="d-flex justify-content-between">
+                <a href="./pastEvents.html" class="btn btn-trasparent btn-lg" tabindex="-1" role="button">
+                    <i class="bi bi-chevron-left"></i>
+                </a>
+                <h2 class="align-self-center">Contact</h2>
+                <a class="btn bg-trasparent btn-lg" href="./stats.html" tabindex="-1" role="button">
+                    <i class="bi bi-chevron-right"></i>
+                </a>
 
-                <div class="carousel-inner">
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="100"
-                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Primer slide"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Placeholder</title>
-                            <rect width="100%" height="100%" fill="#f5f5f5"></rect>
-                            <text x="50%" y="50%" fill="#aaa" dy=".3em" text-anchor="middle">Home</text>
-                        </svg>
-
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="100"
-                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Segundo slide"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Placeholder</title>
-                            <rect width="100%" height="100%" fill="#eee"></rect>
-                            <text x="50%" y="50%" fill="#bbb" dy=".3em" text-anchor="middle">Upcoming
-                                Events</text>
-                        </svg>
-
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="100"
-                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Tercer slide"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Placeholder</title>
-                            <rect width="100%" height="100%" fill="#e5e5e5"></rect>
-                            <text x="50%" y="50%" fill="#999" dy=".3em" text-anchor="middle">Past
-                                Events</text>
-                        </svg>
-
-                    </div>
-                    <div class="carousel-item active  data-bs-interval=" 5000">
-                        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="100"
-                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Cuarto slide"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Placeholder</title>
-                            <rect width="100%" height="100%" fill="#e5e5e5"></rect>
-                            <text x="50%" y="50%" fill="#999" dy=".3em" text-anchor="middle">Contact</text>
-                        </svg>
-
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800" height="100"
-                            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Quinto slide"
-                            preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Placeholder</title>
-                            <rect width="100%" height="100%" fill="#e5e5e5"></rect>
-                            <text x="50%" y="50%" fill="#999" dy=".3em" text-anchor="middle">Stats</text>
-                        </svg>
-
-                    </div>
-
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Anterior</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Siguiente</span>
-                </button>
             </div>
         </div>
 
@@ -128,39 +72,43 @@
 
         <!-- Formulario Contacto -->
         <div class="container g-2">
-            <form class="row  justify-content-center">
+            <form class="contact row d-flex justify-content-center">
 
-                <div class="m-3 bg-body-secondary col-7">
+                <div class="m-3 p-3  col-7">
                     <label for="nameInput" class="form-label">Name</label>
-                    <input type="text" class="form-control mb-2" id="nameInput" >
-                </div>
-                <div class="m-3 bg-body-secondary col-7">
+                    <input type="text" class="form-control mb-2" id="nameInput">
+
+
                     <label for="emailInput" class="form-label">Email</label>
                     <input type="email" class="form-control mb-2" id="emailInput">
-                </div>
-                <div class="m-3 bg-body-secondary col-7">
+
                     <label for="msnInput" class="form-label">Message</label>
-                    <input type="text" class="form-control mb-2" id="msnInput">
+                    <textarea class="form-control" id="msnInput" rows="5"></textarea>
+                    <div id="btn-sub" class="d-flex justify-content-end">
+                        <button type="button" class="btnsub m-3">Submit</button>
+
+                    </div>
                 </div>
             </form>
         </div>
     </main>
 
     <footer>
-        <div class="container-fluid d-inline-flex justify-content-between feet">
+        <div class="container-fluid mt-0 d-inline-flex justify-content-between feet">
             <div>
-                <button type="button" class="btn btn-primary btn-sm rounded-5">
+                <button type="button" class="btn btn-danger btn-sm rounded-5">
                     <i class="bi bi-instagram"></i>
                 </button>
-                <button type="button" class="btn btn-secondary btn-sm rounded-5">
+                <button type="button" class="btn btn-primary btn-sm rounded-5">
                     <i class="bi bi-facebook"></i>
                 </button>
-                <button type="button" class="btn btn-secondary btn-sm rounded-5">
+                <button type="button" class="btn btn-success btn-sm rounded-5">
                     <i class="bi bi-whatsapp rounded-2"></i>
                 </button>
             </div>
+
             <div>
-                <span class="p-2 align-middle fs-4">Cohort</span>
+                <span class="p-2 align-middle fs-4">FE11-TM</span>
             </div>
         </div>
 
