--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 </div>
                 <form class="g-2 col-sm col-md-5  justify-content-end">
                     <div class="input-group  mt-1 mb-3">
-                        <input type="text" class="form-control" placeholder=""
-                            aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
+                            aria-describedby="button-addon2">
                         <button class="btn btn-outline-secondary" type="button" id="button-addon2">
                             <i class="bi bi-search"></i>
                         </button>
@@ -192,6 +192,7 @@
         </div>
 
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
