--- a/assets/pages/details.html
+++ b/assets/pages/details.html
@@ -62,7 +62,7 @@
             <div class="col-md-4 col-sm p-2 border mt-5 mb-5 rounded bg-secondary ">
                 <div class="cardDetail h-100">
                     <div class="card-body  p-2">
-                        <img src="../img/Food_Fair.jpg" class="cardDetail-img rounded align-item-center" alt="...">
+                        <img src="../img/Food_Fair.jpg" id="bigcard" class="cardDetail-img rounded align-item-center" alt="...">
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 <div class="cardDetail h-100">
                     <div class="card-body p-4 m-3">
                         <h3 class="card-title text-center mb-3">Food Tour</h3>
-                        <ul>
+                        <ul id="detail-li">
                             <li>Name</li>
                             <li>Date</li>
                             <li>Description</li>
@@ -114,6 +114,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
+        <script type="module" src="../scripts/amazing.js"></script>
+        <script type="module" src="../scripts/details.js"></script>
 
 </body>
 
