--- a/assets/pages/pastEvents.html
+++ b/assets/pages/pastEvents.html
@@ -98,8 +98,8 @@
                 </div>
                 <form class="g-2 col-sm col-md-5  justify-content-end">
                     <div class="input-group  mt-1 mb-3">
-                        <input type="text" class="form-control" placeholder=""
-                            aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
+                            aria-describedby="button-addon2">
                         <button class="btn btn-outline-secondary" type="button" id="button-addon2">
                             <i class="bi bi-search"></i>
                         </button>
@@ -113,9 +113,33 @@
 
         <!-- Cards -->
         <section class="cards">
+            <div id="cardMain" class="card-group p-3 row justify-content-center row-cols-1">
+
+
+
+                <div class="card m-3 col rounded bg-secondary">
+                    <img src="../img/Museum_Tour.jpg" id="imgp1" class="card-img-top rounded" alt="museum">
+                    <div class="card-body">
+                        <h5 class="card-title">Jurassic Experience</h5>
+                        <p class="card-text">See the Field Museum in a whole new light! Families and groups with
+                            kids
+                            ages 6 to 12 can spend the night at the museum during Dozin’ with the Dinos.</p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between">
+                        <p class="align-self-center">Price $10000</p>
+                        <a href="../pages/details.html" class="btn btn-dark">See Info</a>
+                    </div>
+                </div>
+
+
+
+            </div>
+        </section>
+
+        <!-- <section class="cards">
             <div class="card-group p-3 row justify-content-center row-cols-1">
                 <div class="card m-3 col rounded bg-secondary">
-                    <img src="../img/Museum_Tour.jpg" class="card-img-top rounded" alt="museum">
+                    <img src="../img/Museum_Tour.jpg" id="imgp1" class="card-img-top rounded" alt="museum">
                     <div class="card-body">
                         <h5 class="card-title">Jurassic Experience</h5>
                         <p class="card-text">See the Field Museum in a whole new light! Families and groups with kids
@@ -167,6 +191,8 @@
                 </div>
             </div>
         </section>
+    -->
+
     </main>
 
     <footer>
@@ -194,6 +220,8 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
+    <script type="module" src="../scripts/pastEvents.js"></script>
+    <script type="module" src="../scripts/amazing.js"></script>
 </body>
 
 
