--- a/assets/pages/upcomingEvents.html
+++ b/assets/pages/upcomingEvents.html
@@ -57,8 +57,7 @@
                     <i class="bi bi-chevron-left"></i>
                 </a>
                 <h2 class="align-self-center">Upcoming Events</h2>
-                <a class="btn bg-trasparent btn-lg" href="./pastEvents.html " tabindex="-1" role="button"
-                     >
+                <a class="btn bg-trasparent btn-lg" href="./pastEvents.html " tabindex="-1" role="button">
                     <i class="bi bi-chevron-right"></i>
                 </a>
 
@@ -99,8 +98,8 @@
                 </div>
                 <form class="g-2 col-sm col-md-5  justify-content-end">
                     <div class="input-group  mt-1 mb-3">
-                        <input type="text" class="form-control" placeholder=""
-                            aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <input type="text" class="form-control" placeholder="" aria-label="Recipient's username"
+                            aria-describedby="button-addon2">
                         <button class="btn btn-outline-secondary" type="button" id="button-addon2">
                             <i class="bi bi-search"></i>
                         </button>
@@ -193,6 +192,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
+    <script type="module" src="../scripts/upcomingEvents.js"></script>
+    <script type="module" src="../scripts/amazing.js"></script>
 
 </body>
 
