--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
 </head>
 
 <body class="bg-dark.bg-gradient">
@@ -118,14 +119,14 @@
         <section class="cards">
             <div class="card-group p-3 row justify-content-center row-cols-1">
                 <div class="card m-3 col rounded bg-secondary">
-                    <img src="./assets/img/Cinema.jpg" class="card-img-top rounded" alt="cinema">
+                    <img src="./assets/img/Cinema.jpg" id="card1-img" class="card-img-top rounded" alt="cinema">
                     <div class="card-body">
-                        <h5 class="card-title">Amazing Movies</h5>
-                        <p class="card-text">Generation of sensory effects of rain, wind, impacts, movement, smells, fog
+                        <h5 id="card1-h5" class="card-title">Amazing Movies</h5>
+                        <p id="card1-p" class="card-text">Generation of sensory effects of rain, wind, impacts, movement, smells, fog
                             or light to fully immerse ourselves in the world recreated by the movies.</p>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
-                        <p class="align-self-center">Price $10000</p>
+                        <p id="card1-price" class="align-self-center">Price $10000</p>
                         <a href="./assets/pages/details.html" class="btn btn-dark">See Info</a>
                     </div>
                 </div>
@@ -196,6 +197,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+        
+        <script type="module" src="./assets/scripts/amazing.js"></script>
+        <script type="module" src="./assets/scripts/index.js"></script>
 </body>
 
 
